# btstack

./: .gitignore  CMakeLists.txt  README.md
platform/embedded/: btstack_run_loop_embedded.c  btstack_run_loop_embedded.h  btstack_uart_block_embedded.c  hal_uart_dma.h
platform/newton/: CMakeLists.txt  btstack_run_loop_newton.c  btstack_uart_block_newton.c  btstack_uart_block_newton.h  hal_uart_newton.cpp  hal_uart_newton.h
platform/posix/: btstack_run_loop_posix.c  btstack_stdin_posix.c  btstack_uart_block_posix.c
port/newton/: BluntClient.cpp  BluntClient.h  BluntServer.cpp  BluntServer.h  CMakeLists.txt  Definitions.h  EventsCommands.cpp  EventsCommands.h  Main.cpp  Makefile  blunt3k.exp  blunt3k.ld  blunt3k.ver  btstack.cpp  btstack.exp  btstack.ver  btstack_config.h  glue.s  hal_newton.c  hal_newton.h  hal_timer_newton.cpp  hal_timer_newton.h  hal_uart_newton.cpp  hal_uart_newton.h  log.c  log.h  tags
port/newton-host/: Makefile  btstack  btstack_config.h  hal_uart_dma.c  log.c  log.h  main.c
port/newton/NewtonRuntime/: NewtonExceptions.cpp  NewtonPrivateAPIs.s
port/newton/pkg/: blunt3k.newt  blunt3k.nprj  blunt3k.pkg
port/newton/src/: btstack.cpp  log.c  log.h  main.c
src/: btstack.h  btstack_debug.h  btstack_defines.h  btstack_memory.c  btstack_memory.h  btstack_run_loop.c  btstack_run_loop.h  btstack_run_loop_base.c  btstack_state.h  btstack_uart_block.h  btstack_util.c  btstack_util.h  gap.h  hci.c  hci.h  hci_cmd.h  hci_dump.c  hci_transport.h  hci_transport_h4.c
src/classic/: btstack_link_key_db_static.c
